@@ -1,3 +1,10 @@
+2003-10-10 Bernhard Held <bernhard@bernhardheld.de>
+
+	* src/SDCCast.c (decorateType): added extended constant folding
+	* src/SDCCsymt.c (computeType): cleanup
+	* src/SDCCval.c (valShift): minor optimization
+	* support/regression/tests/ast_constant_folding.c: added
+
 2003-10-09  Erik Petrich <epetrich@ivorytower.norman.ok.us>
 
 	* src/SDCCmain.c: removed some unintended changes
